--- a/src/WebApps/WebMVC/Views/Order/Create.cshtml
+++ b/src/WebApps/WebMVC/Views/Order/Create.cshtml
@@ -37,11 +37,11 @@
                 <input asp-for="OrderTypeId" class="form-control" />
                 <span asp-validation-for="OrderTypeId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="OnHold" class="control-label"></label>
                 <input asp-for="OnHold" class="form-control" />
                 <span asp-validation-for="OnHold" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="OrderQuantity" class="control-label"></label>
                 <input asp-for="OrderQuantity" class="form-control" />
